# software-renderer

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
include/: application.h  image.h  layer.h  model.h  renderer.h  shader.h  texture.h  utils.h  utils.hpp
src/: application.cc  image.cc  main.cc  model.cc  renderer.cc  shader.cc  texture.cc  utils.cc
